--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,25 +4,34 @@
  [{"url": "https://github.com/leanprover/std4.git",
    "type": "git",
    "subDir": null,
-   "rev": "af7f36db6e7e9e395710a70635f915e8e3a0e69b",
+   "rev": "a7543d1a6934d52086971f510e482d743fe30cf3",
    "name": "std",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.4.0",
+   "inputRev": "v4.6.0",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/hhu-adam/lean-i18n.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "c5b84feffb28dbd5b1ac74b3bf63271296fabfa5",
+   "name": "i18n",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "v4.6.0",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/lean4game.git",
    "type": "git",
    "subDir": "server",
-   "rev": "e579071a3b1f0fd48146acf68e186a7270b557aa",
+   "rev": "dd60093dfc508e6cf593b46a6c92b7cbb0f3392f",
    "name": "GameServer",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.4.0",
+   "inputRev": "v4.6.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
    "type": "git",
    "subDir": null,
-   "rev": "ccba5d35d07a448fab14c0e391c8105df6e2564c",
+   "rev": "fd760831487e6835944e7eeed505522c9dd47563",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -31,19 +40,19 @@
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
-   "rev": "646be3a3604d0f2a3c1800cb4279a36493474b18",
+   "rev": "c51fa8ea4de8b203f64929cba19d139e555f9f6b",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "master",
+   "inputRev": "v4.6.0",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/ProofWidgets4",
    "type": "git",
    "subDir": null,
-   "rev": "909febc72b4f64628f8d35cd0554f8a90b6e0749",
+   "rev": "16cae05860b208925f54e5581ec5fd264823440c",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.23",
+   "inputRev": "v0.0.29",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover/lean4-cli",
@@ -55,13 +64,22 @@
    "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover-community/import-graph.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "64d082eeaad1a8e6bbb7c23b7a16b85a1715a02f",
+   "name": "importGraph",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
-   "rev": "cf8e23a62939ed7cc530fbb68e83539730f32f86",
+   "rev": "7ca43cbd6aa34058a1afad8e47190af3ec1f9bdb",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.4.0",
+   "inputRev": "v4.6.0",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "Game",
